Another round of updates.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,10 @@
-set -g prefix C-\
+set -g prefix 'C-\'
 unbind %
 bind | split-window -h
 bind - split-window -v
 bind \ select-pane -t :.+
+bind o select-pane -t :.-
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
