--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,26 @@
+# Command prefix
 set -g prefix 'C-\'
 unbind %
+
+# Window splitting
 bind | split-window -h
 bind - split-window -v
+
+# Window navigation
+bind C-h select-window -t :-
+bind C-l select-window -t :+
+
+# Pane navigation
 bind \ select-pane -t :.+
 bind o select-pane -t :.-
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# Mouse support
+#set -g mouse-resize-pane on
+
+#set-option repeat-time 0
+
+bind C-\ send-prefix
