tmux should start with 256 color support now.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 # Command prefix
 set -g prefix 'C-\'
+bind C-\ send-prefix
 unbind %
 
 # Window splitting
@@ -18,9 +19,6 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Mouse support
-#set -g mouse-resize-pane on
-
-#set-option repeat-time 0
-
-bind C-\ send-prefix
+# Environment
+set-option -g default-terminal "screen-256color"
+set -g history-limit 10000
