Add new shortcuts for resizing tmux panes.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,8 @@ bind | split-window -h
 bind - split-window -v
 
 # Window navigation
-bind C-h select-window -t :-
-bind C-l select-window -t :+
+bind C-p select-window -t :-
+bind C-n select-window -t :+
 
 # Pane navigation
 bind \ select-pane -t :.+
@@ -18,6 +18,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind C-h resize-pane -L 10
+bind C-j resize-pane -D 10
+bind C-k resize-pane -U 10
+bind C-l resize-pane -R 10
 
 # Environment
 set-option -g default-terminal "screen-256color"
