tmux: Fix syntax for version 1.8.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@ bind C-\ send-prefix
 unbind %
 
 # Window splitting
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+bind | split-window -h
+bind - split-window -v
 
 # Window navigation
 bind C-p select-window -t :-
