tmux: Use v to start selection in copy mode.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,10 @@ bind C-j resize-pane -D 10
 bind C-k resize-pane -U 10
 bind C-l resize-pane -R 10
 
+# Easier copy-paste with vim-like key bindings.
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+
 # Environment
 set-option -g default-terminal "screen-256color"
-set -g history-limit 10000
+set -g history-limit 1000000
