tmux: Use r to quickly reload the config.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,9 @@ bind C-l resize-pane -R 10
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
+# Reload the config.
+bind r source-file ~/.tmux.conf
+
 # Environment
 set-option -g default-terminal "screen-256color"
 set -g history-limit 1000000
