--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,7 @@ bind C-\ send-prefix
 unbind %
 
 # Window splitting
-bind | split-window -h
-bind - split-window -v
+run-shell ~/.tmux/splits.tmux
 
 # Window navigation
 bind C-p select-window -t :-
