--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,3 +32,12 @@ bind r source-file ~/.tmux.conf
 # Environment
 set-option -g default-terminal "screen-256color"
 set -g history-limit 1000000
+set -g utf8 on
+set -g status-utf8 on
+
+# Address vim mode switching delay (http://superuser.com/a/252717/65504)
+set -sg escape-time 0
+
+# Emacs key bindings in tmux command prompt (prefix + :) are better than vi 
+# keys, even for vim users.
+set -g status-keys emacs
