vim: Add a clang-format plugin.
Now I can hit <Leader>cf to format the entire file to the Google style
guide.

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "tools/nsenter"]
 	path = tools/nsenter
 	url = https://github.com/jpetazzo/nsenter.git
+[submodule ".vim/bundle/vim-clang-format"]
+	path = .vim/bundle/vim-clang-format
+	url = https://github.com/rhysd/vim-clang-format.git
