vim: Install the clang_complete plugin
The user still needs to install libclang.so and add it to the lookup
path. On Debian/Ubuntu, it looks something like this:

  $ sudo apt install libclang-dev
  $ echo 'export LD_LIBRARY_PATH+=":/usr/lib/llvm-3.6/lib"' >> ~/.bashrc

Now you can use auto-completion.

--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule ".vim/bundle/vim-unimpaired"]
 	path = .vim/bundle/vim-unimpaired
 	url = git@github.com:tpope/vim-unimpaired.git
+[submodule ".vim/bundle/clang_complete"]
+	path = .vim/bundle/clang_complete
+	url = https://github.com/Rip-Rip/clang_complete.git
