awesome: Make brightness inc/dec configurable
Depending on the laptop, different step sizes make sense.

--- a/awesome/prefs.lua.example
+++ b/awesome/prefs.lua.example
@@ -14,5 +14,6 @@ prefs.sound.primary_control = 'Master 1+'
 
 -- Screen preferences
 prefs.main_screen = 1
+prefs.brightness_step = 5
 
 return prefs
