awesome: Add configurable battery widgets
Add a new entry in prefs.lua to the prefs.battery table.
See prefs.lua.example for an example.

--- a/awesome/prefs.lua.example
+++ b/awesome/prefs.lua.example
@@ -16,4 +16,8 @@ prefs.sound.primary_control = 'Master 1+'
 prefs.main_screen = 1
 prefs.brightness_step = 5
 
+-- Battery preferences
+prefs.battery = {}
+--prefs.battery['BAT0'] = { refresh_rate = 10 }
+
 return prefs
