tmux: Reduce history to 100000 lines
Storing up to 1000000 lines was eating up way too much of my RAM for
my comfort.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,7 @@ bind r source-file ~/.tmux.conf
 
 # Environment
 set-option -g default-terminal "screen-256color"
-set -g history-limit 1000000
+set -g history-limit 100000
 set -g utf8 on
 set -g status-utf8 on
 
