tmux: Only enable UTF8-related options before v2.2
Version 2.2 and onwards auto-detects the related terminal capabilities
etc. and sets the UTF8-related options accordingly.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -5,6 +5,7 @@ unbind %
 
 # Window splitting
 run-shell ~/.tmux/splits.tmux
+run-shell ~/.tmux/utf8.tmux
 
 # Window navigation
 bind C-p select-window -t :-
@@ -32,8 +33,6 @@ bind r source-file ~/.tmux.conf
 # Environment
 set-option -g default-terminal "screen-256color"
 set -g history-limit 100000
-set -g utf8 on
-set -g status-utf8 on
 
 # Address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -sg escape-time 0
