vim: Add YouCompleteMe
This is apparently much better than clang_complete. Remains to be
seen. So far I'm liking it.

On a somewhat related note, I thought I had a code browsing plugin
installed as well, but that doesn't seem to be the case. Time to get
on that.

--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule ".vim/bundle/vim-pydocstring"]
 	path = home/.vim/bundle/vim-pydocstring
 	url = https://github.com/heavenshell/vim-pydocstring.git
+[submodule "home/.vim/bundle/YouCompleteMe"]
+	path = home/.vim/bundle/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe/
