--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "home/.vim/bundle/YouCompleteMe"]
 	path = home/.vim/bundle/YouCompleteMe
 	url = https://github.com/Valloric/YouCompleteMe/
+[submodule "home/.vim/bundle/a.vim"]
+	path = home/.vim/bundle/a.vim
+	url = https://github.com/vim-scripts/a.vim.git
