vim: Add matchit plugin
This lets me use % to jump between if/else/endif statements in
Makefiles and such. Really looking forward to using it.

--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,6 @@
 [submodule "home/.vim/bundle/vim-fswitch"]
 	path = home/.vim/bundle/vim-fswitch
 	url = https://github.com/derekwyatt/vim-fswitch.git
+[submodule "home/.vim/bundle/matchit"]
+	path = home/.vim/bundle/matchit
+	url = https://github.com/tmhedberg/matchit.git
