tmux: Add (, ), [, ], : to word separators in copy mode

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -27,6 +27,9 @@ bind C-l resize-pane -R 10
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
+# Make word separators more vim-like for easier navigation.
+set -g word-separators '[]() -_@:'
+
 # Reload the config.
 bind r source-file ~/.tmux.conf
 
