tmux: Update colour scheme
It's been a long while since I tweaked tmux. I think this will be
good. Now I have an easily-visible cyan border around the active pane
and some more visibility on the status bar.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -40,6 +40,62 @@ set -g history-limit 100000
 # Address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -sg escape-time 0
 
-# Emacs key bindings in tmux command prompt (prefix + :) are better than vi 
+# Emacs key bindings in tmux command prompt (prefix + :) are better than vi
 # keys, even for vim users.
 set -g status-keys emacs
+
+# The following color settings are adapted from:
+# http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
+
+# loud or quiet?
+set-option -g visual-activity off
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-window-option -g monitor-activity off
+set-option -g bell-action none
+
+# The modes
+setw -g clock-mode-colour colour135
+setw -g mode-attr bold
+setw -g mode-fg colour232
+setw -g mode-bg colour166
+
+# The panes
+set -g pane-border-bg colour235
+set -g pane-border-fg colour238
+set -g pane-active-border-bg colour236
+set -g pane-active-border-fg colour51
+
+# The statusbar
+set -g status-justify left
+set -g status-interval 2
+set -g status-position bottom
+set -g status-bg colour24
+set -g status-fg colour252
+set -g status-attr dim
+set -g status-left ' #S '
+set -g status-right '#[fg=colour234]│#[fg=default] %F #[fg=colour234]│#[fg=default] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+# The windows
+setw -g window-status-current-fg colour81
+setw -g window-status-current-bg colour238
+setw -g window-status-current-attr bold
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+
+setw -g window-status-fg colour138
+setw -g window-status-bg colour235
+setw -g window-status-attr none
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-fg colour255
+setw -g window-status-bell-bg colour1
+
+# The messages
+set -g message-attr bold
+set -g message-fg colour232
+set -g message-bg colour166
+set -g message-command-fg blue
+set -g message-command-bg black
