--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule "home/.vim/bundle/vim-scroll-off-fraction"]
 	path = home/.vim/bundle/vim-scroll-off-fraction
 	url = https://github.com/drzel/vim-scroll-off-fraction.git
+[submodule "home/.vim/bundle/linediff.vim"]
+	path = home/.vim/bundle/linediff.vim
+	url = https://github.com/AndrewRadev/linediff.vim.git
