--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -99,3 +99,10 @@ set -g message-fg colour232
 set -g message-bg colour166
 set -g message-command-fg blue
 set -g message-command-bg black
+
+# Plugins
+run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
+run-shell ~/.tmux/tmux-continuum/continuum.tmux
+
+# Automatically restore last saved environment when tmux is started.
+set -g @continuum-restore 'on'
