vim: Add vim-obsession and vim-prosession plugins
This is supposed to restore the buffers after closing vim and then
re-opening it. So far it seems to work well. We shall see how I like
it.

--- a/.gitmodules
+++ b/.gitmodules
@@ -106,3 +106,9 @@
 [submodule "home/.tmux/tmux-continuum"]
 	path = home/.tmux/tmux-continuum
 	url = https://github.com/tmux-plugins/tmux-continuum.git
+[submodule "home/.vim/bundle/vim-prosession"]
+	path = home/.vim/bundle/vim-prosession
+	url = https://github.com/dhruvasagar/vim-prosession.git
+[submodule "home/.vim/bundle/vim-obsession"]
+	path = home/.vim/bundle/vim-obsession
+	url = https://github.com/tpope/vim-obsession.git
