system: Get rid of pip
I'm getting tired of using it and I keep having issues. Instead, I'll
try to manually manage dependencies or use Debian packages.

As part of this commit, I also imported the humanfriendly package
since I use it for one of my tools.

--- a/.gitmodules
+++ b/.gitmodules
@@ -112,3 +112,6 @@
 [submodule "home/.vim/bundle/vim-obsession"]
 	path = home/.vim/bundle/vim-obsession
 	url = https://github.com/tpope/vim-obsession.git
+[submodule "home/python/humanfriendly"]
+	path = home/python/humanfriendly
+	url = https://github.com/xolox/python-humanfriendly.git
