tmux: Use CTRL-p and CTRL-n to move windows around

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -8,8 +8,12 @@ run-shell ~/.tmux/splits.tmux
 run-shell ~/.tmux/utf8.tmux
 
 # Window navigation
-bind C-p select-window -t :-
-bind C-n select-window -t :+
+bind p previous-window
+bind n next-window
+
+# Window management
+bind C-p swap-window -t -1
+bind C-n swap-window -t +1
 
 # Pane navigation
 bind \ select-pane -t :.+
