--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -73,7 +73,7 @@ set -g pane-active-border-fg colour51
 # The statusbar
 set -g status-justify left
 set -g status-interval 2
-set -g status-position bottom
+set -g status-position top
 set -g status-bg colour24
 set -g status-fg colour252
 set -g status-attr dim
