tmux: Install the copycat plugin

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -110,3 +110,4 @@ set -g @continuum-restore 'on'
 # Plugins
 run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
 run-shell ~/.tmux/tmux-continuum/continuum.tmux
+run-shell ~/.tmux/copycat.tmux
