--- a/.gitmodules
+++ b/.gitmodules
@@ -115,3 +115,10 @@
 [submodule "home/python/humanfriendly"]
 	path = home/python/humanfriendly
 	url = https://github.com/xolox/python-humanfriendly.git
+[submodule "home/.tmux/tmux-copycat"]
+	path = home/.tmux/tmux-copycat
+	url = https://github.com/tmux-plugins/tmux-copycat.git
+[submodule "home/.tmux/tmux-copycat-tmux-23"]
+	path = home/.tmux/tmux-copycat-tmux-23
+	url = https://github.com/tmux-plugins/tmux-copycat.git
+	branch = tmux-23
