tmux: Disable the layout switch shortcut
I have ruined so many productive streaks after hitting this
accidentally. Time to remove it.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -31,6 +31,9 @@ bind C-l resize-pane -R 10
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
+# Disable switching layouts. I do that accidentally way to often.
+unbind-key Space
+
 # Make word separators more vim-like for easier navigation.
 set -g word-separators '[]() -_@:'
 
