tmux: Disable the tmux-copycat plugin for now
There are some weird issues with the shortcuts that it registers.
In particular, it eats the n/N keys I type and delays them a
non-trivial amount of time.

For example, if I type "Nowhere" fast enough, it might show up as
"owNhere" in the actual terminal. This gets worse on slower
connections over SSH.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -113,4 +113,7 @@ set -g @continuum-restore 'on'
 # Plugins
 run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
 run-shell ~/.tmux/tmux-continuum/continuum.tmux
-run-shell ~/.tmux/copycat.tmux
+# copycat has issues with n/N keybindings. Disable it for now.
+# https://github.com/tmux-plugins/tmux-copycat/issues/130
+# https://github.com/tmux-plugins/tmux-copycat/issues/116
+#run-shell ~/.tmux/copycat.tmux
