tmux: Fix some keybindings for version 2.8
Debian buster comes with tmux 2.8. Debian jessie had 2.3. This
required me to update the key bindings some.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -28,8 +28,7 @@ bind C-k resize-pane -U 10
 bind C-l resize-pane -R 10
 
 # Easier copy-paste with vim-like key bindings.
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+run-shell ~/.tmux/keybindings.tmux
 
 # Disable switching layouts. I do that accidentally way to often.
 unbind-key Space
