home: Ignore ~/.fonts/.uuid file
Not sure who put it there, but it's not important to keep so let's
ignore it.

--- a/home/.gitignore
+++ b/home/.gitignore
@@ -15,6 +15,7 @@
 /.mutt/*.gpg
 /.tmux/resurrect/
 /.fonts/fonts.dir
+/.fonts/.uuid
 /.jira.d/cookies.js
 
 # Use the specific version here so that "git status" will inform me of old
