--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,6 +1,6 @@
 # Command prefix
 set -g prefix 'C-\'
-bind C-\ send-prefix
+bind 'C-\' send-prefix
 unbind %
 
 # Window splitting
@@ -16,7 +16,7 @@ bind C-p swap-window -t -1
 bind C-n swap-window -t +1
 
 # Pane navigation
-bind \ select-pane -t :.+
+bind '\' select-pane -t :.+
 bind o select-pane -t :.-
 bind h select-pane -L
 bind j select-pane -D
@@ -62,49 +62,34 @@ set-option -g bell-action none
 
 # The modes
 setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour232
-setw -g mode-bg colour166
+setw -g mode-style bold,fg=colour232,bg=colour166
 
 # The panes
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
+set -g pane-border-style bg=colour235,fg=colour238
+set -g pane-active-border-style bg=colour236,fg=colour51
 
 # The statusbar
 set -g status-justify left
 set -g status-interval 2
 set -g status-position top
-set -g status-bg colour24
-set -g status-fg colour252
-set -g status-attr dim
+set -g status-style dim,bg=colour24,fg=colour252
 set -g status-left ' #S '
 set -g status-right '#[fg=colour234]│#[fg=default] %F #[fg=colour234]│#[fg=default] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
 # The windows
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
+setw -g window-status-current-style bold,fg=colour81,bg=colour238
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
+setw -g window-status-style none,fg=colour138,bg=colour235
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+setw -g window-status-bell-style bold,fg=colour255,bg=colour1
 
 # The messages
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour166
-set -g message-command-fg blue
-set -g message-command-bg black
+set -g message-style bold,fg=colour232,bg=colour166
+set -g message-command-style fg=blue,bg=black
 
 # Automatically restore last saved environment when tmux is started.
 set -g @continuum-restore 'on'
