--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -94,6 +94,9 @@ set -g message-command-style fg=blue,bg=black
 # Automatically restore last saved environment when tmux is started.
 set -g @continuum-restore 'on'
 
+# Customize copy-mode a bit.
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+
 # Plugins
 run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
 run-shell ~/.tmux/tmux-continuum/continuum.tmux
