bash: make Home and End work better
I don't remember why I added these snippets, but I don't want to lose
them so let's commit it.

--- a/home/.inputrc
+++ b/home/.inputrc
@@ -32,3 +32,7 @@ set skip-completed-text on
 # Allow me to jump forward/backwards by whitespace delimiters.
 "\e\C-f": shell-forward-word
 "\e\C-b": shell-backward-word
+
+# Fix Home and End.
+"\e[7~":beginning-of-line
+"\e[8~":end-of-line
