--- a/home/.gitignore
+++ b/home/.gitignore
@@ -18,6 +18,9 @@
 /.fonts/.uuid
 /.jira.d/cookies.js
 
+# A virtualenv for nvim's +python3 support.
+/.vim/pynvim/
+
 # Use the specific version here so that "git status" will inform me of old
 # versions lingering around.
 # TODO(phil): Figure out a way to auto-remove old versions in install.py.
