tmux: Support alacritty a bit better

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -6,6 +6,7 @@ unbind %
 # Window splitting
 run-shell ~/.tmux/splits.tmux
 run-shell ~/.tmux/utf8.tmux
+run-shell ~/.tmux/term.tmux
 
 # Window navigation
 bind p previous-window
@@ -38,10 +39,6 @@ set -g word-separators '[]() -_@:'
 
 # Reload the config.
 bind r source-file ~/.tmux.conf
-
-# Environment
-set-option -g default-terminal "screen-256color"
-set -g history-limit 100000
 
 # Address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -sg escape-time 0
